# gpmap-v2

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SCHEMA.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
benchmarks/: vs_v1.py
crates/gpmap-core/: Cargo.toml
crates/gpmap-core/src/: encoding.rs  enumerate.rs  hamming.rs  lib.rs
docs/: index.md  installation.md  quickstart.md
docs/concepts/: encoding-table.md  genotype-phenotype-maps.md  schema-contract.md
docs/guides/: loading-saving.md  missing-genotypes.md  simulators.md
docs/javascripts/: mathjax.js
docs/reference/: changelog.md  core.md  encoding.md  enumerate.md  errors.md  exceptions.md  io.md  simulate.md  stats.md
docs/stylesheets/: extra.css
examples/streamlit/: README.md  requirements.txt  showcase.py
examples/streamlit/app_pages/: container.py  encoding.py  enumerate.py  errors_stats.py  home.py  io.py  masking.py  sim_fuji.py  sim_hoc.py  sim_multipeak.py  sim_nk.py  sim_random.py
examples/streamlit/utils/: charts.py  controls.py  ui.py
python/gpmap/: __init__.py  _rust.pyi  core.py  encoding.py  enumerate.py  errors.py  exceptions.py  io.py  stats.py
python/gpmap/simulate/: __init__.py  base.py  fuji.py  hoc.py  mask.py  multipeak_fuji.py  nk.py  random.py
tests/: conftest.py
tests/property/: test_invariants.py
tests/schema/: test_contract.py
tests/simulate/: test_simulators.py
tests/unit/: test_core.py  test_encoding.py  test_enumerate.py  test_errors.py  test_io.py  test_stats.py
