[package]
name = "gpmap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Rust hot-path primitives for gpmap-v2 (encoding, hamming, enumeration)."

[lib]
name = "gpmap_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["abi3-py310", "extension-module"] }
numpy = "0.22"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"

[features]
default = []
extension-module = ["pyo3/extension-module"]
